# game_engine_ps1

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  vcpkg.json
docs/: 00_project_goals.md  01_math_pipeline.md  02_framebuffer_and_window.md  03_ps1_gpu_notes.md  04_vectors.md
src/: main.cpp
src/core/: color.cpp  color.h  framebuffer.cpp  framebuffer.h
src/engine/: application.cpp  application.h
src/math/: vec2.cpp  vec2.h  vec3.cpp  vec3.h
tests/: math_tests.cpp
